# noah-owp-modular

./: .gitignore  CMakeLists.txt  FindNetCDF.cmake  INSTALL.md  Makefile  README.md  configure  err_flag_info.txt  nwm_baseline_vars_dev_notes.md
.github/workflows/: Build_and_Run_Standalone_Test.yml  ngen_integration.yaml  tmp.md
bmi/: CMakeLists.txt  Makefile  bmi.f90  bmi_grid.f90  bmi_noah_owp.f90  bmi_noahmp.f90  bmi_noahowp.f90
config/: user_build_options.bigsur.gfortran  user_build_options.cheyenne  user_build_options.gfortran.linux
data/: GriddedAttributes.nc  NorthForkAttributes.nc  NorthForkGriddedAttributes.nc  netcdf_dummy.nc  netcdf_input.nc  netcdf_landuse.nc  netcdf_soils.nc
docs/: changelog.md
driver/: AsciiReadModule.f90  DomainVarInTransferModule.f90  DomainVarTransferModule.f90  EnergyVarInTransferModule.f90  EnergyVarTransferModule.f90  ForcingVarInTransferModule.f90  ForcingVarTransferModule.f90  LevelsVarTransferModule.f90  Makefile  NoahModularDriver.f90  NoahowpGridDriverModule.f90  NoahowpGridTypeInitModule.f90  NoahowpGridTypeModule.f90  NoahowpReadNamelistModule.f90  NoahowpReadTableModule.f90  NoahowpmpGriddedDriverModule.f90  NoahowpmpIOType.f90  NoahowpmpIOTypeInitModule.f90  NoahowpmpIOVarType.f90  NoahowpmpIOVarTypeInitModule.f90  NoahowpmpReadNamelistModule.f90  NoahowpmpReadTableModule.f90  OptionsVarInTransferModule.f90  OptionsVarTransferModule.f90  OutputModule.f90  ParametersVarInTransferModule.f90  ParametersVarTransferModule.f90  WaterVarInTransferModule.f90  WaterVarTransferModule.f90
modules/full/: readme.md
modules/full/bmi/: bmi_noahmp.f90
modules/full/config/: user_build_options.cheyenne
modules/full/driver/: AsciiReadModule.f90  Makefile  NoahModularDriver.f90  OutputModule.f90  noahmp_ascii_read.f90  noahmp_driver.f90  noahmp_output.f90
modules/full/parameters/: MPTABLE.TBL  param.namelist
modules/full/run/: Makefile  namelist.input
modules/full/src/: AlbedoModule.f90  AtmProcessing.f90  ConstantsModule.f90  DateTimeUtilsModule.f90  DomainType.f90  EnergyModule.f90  EnergyType.f90  EtFluxModule.f90  ForcingModule.f90  ForcingType.f90  LevelsType.f90  Makefile  NamelistRead.f90  OptionsType.f90  ParametersRead.f90  ParametersType.f90  RunModule.f90  ShortwaveRadiationModule.f90  SnowLayerChange.f90  SnowWaterRenew.f90  SoilWaterModule.f90  ThermalPropertiesModule.f90  WaterModule.f90  WaterType.f90  modelConfigRead.f90  tmpdev_module_sf_noahmplsm.f90
modules/main/: Makefile  changelog.md  configure  readme.md  user_build_options
modules/main/config/: user_build_options.bigsur.gfortran  user_build_options.keith.gfortran  user_build_options.mike.gfortran
modules/main/docs/: changelog.md
modules/main/driver/: Makefile  noahmp_ascii_read.f90  noahmp_driver.f90  noahmp_output.f90  snow_driver.f90  snow_output.f90
modules/main/ref_codes_tmp/: README.md  module_sf_noahmplsm.F
modules/main/run/: Makefile  namelist.input  output_no_energy.nc  output_ye_energy.nc
modules/main/src/: AtmProcessing.f90  BareFluxModule.f90  ConstantsModule.f90  DevNotes.txt  DomainType.f90  EnergyModule.f90  EnergyType.f90  EtFluxModule.f90  FluxUtilityModules.f90  ForcingType.f90  LevelsType.f90  Makefile  NamelistRead.f90  OptionsType.f90  ParametersType.f90  PrecipHeatModule.f90  ShortwaveRadiationModule.f90  SnowSoilTempModule.f90  SurfaceRunoffInfiltration.f90  SurfaceRunoffModule.f90  UtilitiesModule.f90  VegeFluxModule.f90  WaterType.f90  bareflux.txt
modules/snow/: changelog.md  user_build_options
modules/snow/config/: user_build_options.cheyenne
modules/snow/driver/: Makefile  snow_driver.f90  snow_output.f90
modules/snow/run/: Makefile  namelist.input
modules/snow/src/: AlbedoModule.f90  AtmProcessing.f90  CanopyWaterModule.f90  DomainType.f90  EnergyModule.f90  EnergyType.f90  ForcingModule.f90  ForcingType.f90  InterceptionModule.f90  LevelsType.f90  Makefile  NamelistRead.f90  OptionsType.f90  ParametersType.f90  ShortwaveRadiationModule.f90  SnowLayerChange.f90  SnowWaterModule.f90  SnowWaterRenew.f90  SoilWaterModule.f90  SoilWaterMovement.f90  SubsurfaceRunoffModule.f90  SurfaceRunoffInfiltration.f90  SurfaceRunoffModule.f90  ThermalPropertiesModule.f90  WaterModule.f90  WaterType.f90  atm.f90
modules/surface/: readme.md
modules/surface/config/: user_build_options.cheyenne  user_build_options.macos.gfortran  user_build_options.pgf90.linux
modules/surface/docs/: changelog.md  noahmp_pbr_analysis.md
modules/surface/driver/: Makefile  noahmp_driver.f90  noahmp_output.f90
modules/surface/run/: Makefile  namelist.input
modules/surface/src/: CanopyWaterModule.f90  EnergyModule.f90  InterceptionModule.f90  Makefile  NamelistRead.f90  ParametersType.f90  SnowLayerChange.f90  SoilWaterModule.f90  SoilWaterRetentionCoeff.f90  WaterType.f90  (+3 more)
modules/surface_bmi/: Makefile  configure  readme.md
run/: Makefile  NoahowpProgram.f90  namelist.input
src/: AlbedoModule.f90  AtmProcessing.f90  AttributesType.f90  CMakeLists.txt  ConstantsModule.f90  DateTimeUtilsModule.f90  DevNotes.txt  DomainGridType.f90  DomainType.f90  DomainTypeTransfer.f90  EnergyGridType.f90  EnergyModule.f90  EnergyType.f90  EnergyTypeTransfer.f90  ErrorCheckModule.f90  ErrorType.f90  EtFluxModule.f90  ForcingGridType.f90  ForcingModule.f90  ForcingType.f90  ForcingTypeTransfer.f90  GridInfoType.f90  GridlistRead.f90  InterceptionModule.f90  LevelsGridType.f90  LevelsType.f90  LevelsTypeTransfer.f90  Makefile  NamelistRead.f90  NetCDFVarsType.f90  NoahowpGridType.f90  NoahowpGridTypeInitModule.f90  NoahowpType.f90  NoahowpmpType.f90  OptionsGridType.f90  OptionsType.f90  OptionsTypeTransfer.f90  OutputModule.f90  ParametersGridType.f90  ParametersRead.f90  (+15 more)
test/: Makefile  README.md  bmi_test_output.txt  namelist.input  noahowp_bmi_test.f90  noahowp_driver_test.f90
test/analysis/: CreateGriddedAttributesNCFile.R  GetTiffinForcings.ipynb  GetTiffinForcings.py  NorthFork.gpkg  compare_outputnc.py  create_dummy_netcdf.py  create_dummy_netcdf_singlefile.py  get_noahom_gridded_attributes_nc_file.R  get_noahom_input_nc_file.R  hyf.gpkg
(+29 files in other folders)
